# Real-Time-Blockchain-Analytics

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml
config/: __init__.py  logging.py  metadata.py  settings.py  versions.py
dashboard/: app.py
examples/: __init__.py  alchemy_blocks_example.py  kafka_test.py  read_kafka_stream_example.py  uniswap_swap_logs_example.py
producer/: alchemy_client.py  config.py  dispatcher.py  event_handlers.py  kafka_producer.py  models.py  parser.py  registry.py  run_producer.py  test_alchemy_blocks.py  test_uniswap_swap_logs.py
producer/protocols/: __init__.py  base.py  evm.py
producer/protocols/aave_v3/: __init__.py  abi.py  constants.py  handlers.py  plugin.py
producer/protocols/uniswap_v3/: __init__.py  abi.py  constants.py  handlers.py  parser.py  plugin.py
spark/: build_aave_gold.py  build_aave_silver.py  build_gold.py  build_swaps_gold.py  build_swaps_silver.py  event_schema.py  kafka_stream.py  parquet.py  read_kafka_stream.py  write_swaps_bronze.py
tests/: data_quality_check.py  test_aave_gold.py  test_aave_silver.py  test_aave_v3_plugin.py  test_alchemy_client.py  test_event_handlers.py  test_gold_entrypoint.py  test_imports.py  test_metadata_propagation.py  test_parser.py  test_plugin_framework.py  test_producer_lifecycle.py  test_shared_helpers.py  test_silver_manifest.py
