[project]
name = "real-time-blockchain-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.14.2",
    "duckdb>=1.5.4",
    "pandas>=3.0.4",
    "pyspark>=4.1.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.20",
    "streamlit>=1.58.0",
    "web3>=7.16.0",
    "websocket-client>=1.9.0",
]
